# stocha

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
examples/: 01_basic_rng.ja.py  01_basic_rng.py  02_stock_gbm.ja.py  02_stock_gbm.py  03_quasi_random.ja.py  03_quasi_random.py  04_stochastic_vol.ja.py  04_stochastic_vol.py  05_risk_copula.ja.py  05_risk_copula.py  06_interest_rate.ja.py  06_interest_rate.py  07_american_option.ja.py  07_american_option.py  08_multi_asset.ja.py  08_multi_asset.py  09_heston_calibration.ja.py  09_heston_calibration.py  10_local_vol.ja.py  10_local_vol.py  11_exotic_options.ja.py  11_exotic_options.py  12_exotic_enhancements.ja.py  12_exotic_enhancements.py  benchmark.py
python/stocha/: __init__.py
scripts/: gen_ziggurat_table.py
src/: lib.rs
src/copula/: gaussian.rs  mod.rs  student_t.rs
src/finance/: asian.rs  barrier.rs  bs.rs  gbm.rs  greeks.rs  heston.rs  heston_calibration.rs  heston_cf.rs  heston_cos.rs  hull_white.rs  jump_diffusion.rs  lookback.rs  lsmc.rs  mod.rs  multi_gbm.rs  sabr.rs  sabr_calibration.rs  svi.rs
src/prng/: mod.rs  pcg64.rs
src/qrng/: halton.rs  mod.rs  sobol.rs
src/risk/: mod.rs  var_cvar.rs
tests/: test_exotics.py  test_greeks.py  test_local_vol.py  test_models.py  test_phase3.py  test_risk.py  test_rng.py  test_stocha.py
