[package]
name = "stocha"
version = "1.2.0"
edition = "2021"
description = "High-performance random number and financial simulation library for Python"
license = "MIT"
repository = "https://github.com/stocha-rs/stocha"
keywords = ["random", "simulation", "finance", "quant", "monte-carlo"]
categories = ["science", "mathematics", "simulation"]

[lib]
name = "stocha"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
ndarray = { version = "0.17", features = ["rayon"] }
rand = "0.10"
rand_pcg = { version = "0.10", features = ["serde"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
sobol-qmc = "2.5.1"
halton = "0.2.1"
rand_distr = "0.6"
faer = "0.24"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
