[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "stocha"
version = "0.3.2"
description = "High-performance random number and financial simulation library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["random", "simulation", "finance", "quant", "monte-carlo", "stochastic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "stocha._stocha"
