[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "stocha"
version = "1.0.0"
description = "High-performance random number and financial simulation library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["random", "simulation", "finance", "quant", "monte-carlo", "stochastic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/heki1224/stocha"
Repository = "https://github.com/heki1224/stocha"
Changelog = "https://github.com/heki1224/stocha/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
strip = true
python-source = "python"
module-name = "stocha._stocha"
